--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <header>
             <div class="help-section">
-                <img src="qmark.png" alt="Help Icon" class="help-icon">
+                <img src="/live/qmark.png" alt="Help Icon" class="help-icon">
                 <a href="#" class="help-link">Help</a>
             </div>
             <a href="#" class="home-link">
